[package]
name = "psxmem"
version = "0.1.1"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "This is a library to read and write PSX/PS1 memory card files."
readme = "README.md"
homepage = "https://github.com/genonullfree/psxmem.git"
repository = "https://github.com/genonullfree/psxmem.git"
keywords = ["ps1", "psx", "memory-card"]
categories = ["filesystem", "data-structures"]
edition = "2021"

[dependencies]
deku = "0.13.1"
gif = "0.11.4"
png = "0.17.6"
thiserror = "1.0.35"
