[package]
name = "psxmem"
version = "0.1.2"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "This is a library to read and write PSX/PS1 memory card files."
readme = "README.md"
homepage = "https://github.com/genonullfree/psxmem.git"
repository = "https://github.com/genonullfree/psxmem.git"
keywords = ["ps1", "psx", "memory-card"]
categories = ["filesystem", "data-structures"]
edition = "2021"

[dependencies]
byteorder = "1.5.0"
deku = "0.16.0"
gif = "0.13.1"
png = "0.17.13"
thiserror = "1.0.59"
